--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <a-scene embedded arjs>
         <!-- Kamera AR -->
         <a-marker type="pattern" url="pattern-marker.patt">
-            <!-- Model 3D (BUMifix.glb) -->
-            <a-entity gltf-model="atmosfirrevisi.glb" scale="1 1 1" position="0 0 0"></a-entity>
+            <!-- Model 3D (ATMOSFER.glb) -->
+            <a-entity gltf-model="ATMOSFER.glb" scale="1 1 1" position="0 0 0"></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
